--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Um bot que irá moderar e deixar a sua comunidade segura de um jeito fácil"
+    <meta name="description" content="Um bot que irá moderar e deixar a sua comunidade segura de um jeito fácil">
     <title>Balle Bot - Modere a sua comunidade do Discord</title>
 </head>
 
 <body>
     <header>
-        
+        <img src="img/logo.svg">
+        <nav>
+            <a>Comunidade Ballerini</a>
+            <a>Tutorial</a>
+            <a>Open Source</a>
+            <a>Comandos</a>
+        </nav>
     </header>
-
     <main>
 
     </main>
-
     <footer>
 
     </footer>
-
 </body>
 </html>
