--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <img src="img/logo.svg">
+        <img src="img/logo.svg" alt="logo da comunidade">
         <nav>
             <a>Comunidade Ballerini</a>
             <a>Tutorial</a>
@@ -18,7 +18,20 @@
         </nav>
     </header>
     <main>
-
+        <section>
+            <div> 
+                <h1>Balle Bot</h1>
+                <h2>Deixe a sua comunidade segura de um jeito fácil</h2>
+                <button>Me adicione</button>
+            </div>
+            <img src="img/ballebot.png" alt="imagem Balle Bot">
+        </section>
+        <section>
+            <h3>O que ela faz por você?</h3>
+            <p>1. Cria um sistema de verificação capcha para novos membros garantirem que não são robôs</p>
+            <p>2. Possui um sistema de banimento automático para links suspeitos que forem enviados na comunidade</p>
+            <p>3. Sistema de avisos e banimento manual, para pessoas administradoras utilizarem</p>
+        </section>
     </main>
     <footer>
 
