config footer - body

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </section>
     </main>
     <footer>
-
+        <img src="img/BALLERINI.svg" alt="imagem ballerini em maiúsculo">
     </footer>
 </body>
 </html>
