config cllasses body

--- a/index.html
+++ b/index.html
@@ -6,35 +6,34 @@
     <meta name="description" content="Um bot que irá moderar e deixar a sua comunidade segura de um jeito fácil">
     <title>Balle Bot - Modere a sua comunidade do Discord</title>
 </head>
-
 <body>
-    <header>
-        <img src="img/logo.svg" alt="logo da comunidade">
-        <nav>
-            <a>Comunidade Ballerini</a>
-            <a>Tutorial</a>
-            <a>Open Source</a>
-            <a>Comandos</a>
+    <header class="cabecalho">
+        <img class="cabecalho-img" src="img/logo.svg" alt="logo da comunidade">
+        <nav class="cabecalho-menu">
+            <a class="cabecalho-menu-item">Comunidade Ballerini</a>
+            <a class="cabecalho-menu-item">Tutorial</a>
+            <a class="cabecalho-menu-item">Open Source</a>
+            <a class="cabecalho-menu-item">Comandos</a>
         </nav>
     </header>
-    <main>
-        <section>
-            <div> 
-                <h1>Balle Bot</h1>
-                <h2>Deixe a sua comunidade segura de um jeito fácil</h2>
-                <button>Me adicione</button>
+    <main class="conteudo">
+        <section class="conteudo-principal">
+            <div class="conteudo-principal-escrito"> 
+                <h1 class="conteudo-principal-escrito-titulo">Balle Bot</h1>
+                <h2 class="conteudo-principal-escrito-subtitulo">Deixe a sua comunidade segura de um jeito fácil</h2>
+                <button class="conteudo-principal-escrito-botao">Me adicione</button>
             </div>
-            <img src="img/ballebot.png" alt="imagem Balle Bot">
+            <img class="conteudo-principal-img" src="img/ballebot.png" alt="imagem Balle Bot">
         </section>
-        <section>
-            <h3>O que ela faz por você?</h3>
-            <p>1. Cria um <strong>sistema de verificação capcha</strong> para novos membros garantirem que não são robôs</p>
-            <p>2. Possui um <strong>sistema de banimento automático</strong> para links suspeitos que forem enviados na comunidade</p>
-            <p>3. <strong>Sistema de avisos e banimento manual</strong>, para pessoas administradoras utilizarem</p>
+        <section class="conteudo-secundario">
+            <h3 class="conteudo-secundario-titulo">O que ela faz por você?</h3>
+            <p class="conteudo-secundario-opcao">1. Cria um <strong>sistema de verificação capcha</strong> para novos membros garantirem que não são robôs</p>
+            <p class="conteudo-secundario-opcao">2. Possui um <strong>sistema de banimento automático</strong> para links suspeitos que forem enviados na comunidade</p>
+            <p class="conteudo-secundario-opcao">3. <strong>Sistema de avisos e banimento manual</strong>, para pessoas administradoras utilizarem</p>
         </section>
     </main>
-    <footer>
-        <img src="img/BALLERINI.svg" alt="imagem ballerini em maiúsculo">
+    <footer class="rodape">
+        <img class="rodape-img" src="img/BALLERINI.svg" alt="imagem ballerini em maiúsculo">
     </footer>
 </body>
 </html>
