config link html - css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Um bot que irá moderar e deixar a sua comunidade segura de um jeito fácil">
     <title>Balle Bot - Modere a sua comunidade do Discord</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
     <header class="cabecalho">
         <img class="cabecalho-img" src="img/logo.svg" alt="logo da comunidade">
