update texto botão

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="conteudo-principal-escrito"> 
                 <h1 class="conteudo-principal-escrito-titulo">Balle Bot</h1>
                 <h2 class="conteudo-principal-escrito-subtitulo">Deixe a sua comunidade segura de um jeito fácil</h2>
-                <button class="conteudo-principal-escrito-botao">Me adicione</button>
+                <button class="conteudo-principal-escrito-botao">Me adicione!</button>
             </div>
             <img class="conteudo-principal-img" src="img/ballebot.png" alt="imagem Balle Bot">
         </section>
