--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Um bot que irá moderar e deixar a sua comunidade segura de um jeito fácil">
     <title>Balle Bot - Modere a sua comunidade do Discord</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 
 <body>
